--- a/views/lookupReport.ejs
+++ b/views/lookupReport.ejs
@@ -398,7 +398,7 @@
                         <textarea rows="3" cols="115" type="text" style="resize:none;overflow-y:scroll;font-size:medium;font-weight:bold"><%=exp[0].explog%></textarea>
                     </div>
                     <div>
-                        <h4>记录分析</h4>
+                        <h4>失分原因</h4>
                         <textarea rows="3" cols="115" type="text" style="resize:none;overflow-y:scroll;font-size:medium;font-weight:bold"><%=score[0].explogRecord%></textarea>
                     </div>
                 </div>
@@ -408,7 +408,7 @@
                         <table id="tableData" align="left" border="1" style="margin-left:0px; width: 100%;"></table>
                     </div>
                     <br>
-                    <h4>记录分析</h4>
+                    <h4>失分原因</h4>
                     <textarea rows="3" cols="115" type="text" style="resize:none;overflow-y:scroll;font-size:medium;font-weight:bold"><%=score[0].dataRecord%></textarea>
                 </div>
             </div>
