--- a/public/stylesheets/experNew.css
+++ b/public/stylesheets/experNew.css
@@ -350,7 +350,7 @@ body {
     position: absolute;
     left: 810px;
     top: 287px;
-    color: #cccccc;
+    color: #8dee9a;
 }
 
 #labelFrequency {
