--- a/views/new_orderMessage.ejs
+++ b/views/new_orderMessage.ejs
@@ -87,9 +87,9 @@
                         <span class="orderSituation1">人预约</span>
 
                     </div>
-                    <div onclick="seeDetails('13:00')" class="exptimeslot" title="查看详情">
+                    <div onclick="seeDetails('11:00')" class="exptimeslot" title="查看详情">
                         <br>
-                        <div class="orderTime">时间段:13:00-14:00</div>
+                        <div class="orderTime">时间段:11:00-12:00</div>
                         <br>
                         <span class="orderSituation">已有</span>
                         <span class="ordernum" name="num"></span>
@@ -98,10 +98,27 @@
                 </div>
                 <br>
                 <div class="exptime">
+                    <div onclick="seeDetails('12:00')" class="exptimeslot" title="查看详情">
+                        <br>
+                        <div class="orderTime">时间段:12:00-13:00</div>
+
+                        <br>
+                        <span class="orderSituation">已有</span>
+                        <span class="ordernum" name="num"></span>
+                        <span class="orderSituation1">人预约</span>
+                    </div>
+                    <div onclick="seeDetails('13:00')" class="exptimeslot" title="查看详情">
+                        <br>
+                        <div class="orderTime">时间段:13:00-14:00</div>
+
+                        <br>
+                        <span class="orderSituation">已有</span>
+                        <span class="ordernum" name="num"></span>
+                        <span class="orderSituation1">人预约</span>
+                    </div>
                     <div onclick="seeDetails('14:00')" class="exptimeslot" title="查看详情">
                         <br>
                         <div class="orderTime">时间段:14:00-15:00</div>
-
                         <br>
                         <span class="orderSituation">已有</span>
                         <span class="ordernum" name="num"></span>
@@ -110,25 +127,6 @@
                     <div onclick="seeDetails('15:00')" class="exptimeslot" title="查看详情">
                         <br>
                         <div class="orderTime">时间段:15:00-16:00</div>
-
-                        <br>
-                        <span class="orderSituation">已有</span>
-                        <span class="ordernum" name="num"></span>
-                        <span class="orderSituation1">人预约</span>
-                    </div>
-                    <div onclick="seeDetails('16:00')" class="exptimeslot" title="查看详情">
-                        <br>
-                        <div class="orderTime">时间段:16:00-17:00</div>
-
-                        <br>
-                        <span class="orderSituation">已有</span>
-                        <span class="ordernum" name="num"></span>
-                        <span class="orderSituation1">人预约</span>
-                    </div>
-                    <div onclick="seeDetails('17:00')" class="exptimeslot" title="查看详情">
-                        <br>
-                        <div class="orderTime">时间段:17:00-18:00</div>
-
                         <br>
                         <span class="orderSituation">已有</span>
                         <span class="ordernum" name="num"></span>
@@ -136,6 +134,63 @@
                     </div>
                 </div>
                 <br>
+                <div class="exptime">
+                    <div class="exptimeslot" onclick="seeDetails('16:00')" title="查看详情">
+                        <br>
+                        <div class="orderTime">时间段:16:00-17:00</div>
+                        <br>
+                        <span class="orderSituation">已有</span>
+                        <span class="ordernum" name="num"></span>
+                        <span class="orderSituation1">人预约</span>
+                        <br>
+                    </div>
+                    <div onclick="seeDetails('17:00')" class="exptimeslot" title="查看详情">
+                        <br>
+                        <div class="orderTime">时间段:17:00-18:00</div>
+                        <br>
+                        <span class="orderSituation">已有</span>
+                        <span class="ordernum" name="num"> </span>
+                        <span class="orderSituation1">人预约</span>
+                    </div>
+                    <div onclick="seeDetails('18:00')" class="exptimeslot" title="查看详情">
+                        <br>
+                        <div class="orderTime">时间段:18:00-19:00</div>
+                        </br>
+                        <br>
+                        <span class="orderSituation">已有</span>
+                        <span class="ordernum" name="num"></span>
+                        <span class="orderSituation1">人预约</span>
+
+                    </div>
+                    <div onclick="seeDetails('19:00')" class="exptimeslot" title="查看详情">
+                        <br>
+                        <div class="orderTime">时间段:19:00-20:00</div>
+                        <br>
+                        <span class="orderSituation">已有</span>
+                        <span class="ordernum" name="num"></span>
+                        <span class="orderSituation1">人预约</span>
+                    </div>
+                </div>
+                <br>
+                <div class="exptime">
+                    <div class="exptimeslot" onclick="seeDetails('20:00')" title="查看详情">
+                        <br>
+                        <div class="orderTime">时间段:20:00-21:00</div>
+                        <br>
+                        <span class="orderSituation">已有</span>
+                        <span class="ordernum" name="num"></span>
+                        <span class="orderSituation1">人预约</span>
+                        <br>
+                    </div>
+                    <div onclick="seeDetails('21:00')" class="exptimeslot" title="查看详情">
+                        <br>
+                        <div class="orderTime">时间段:21:00-22:00</div>
+                        <br>
+                        <span class="orderSituation">已有</span>
+                        <span class="ordernum" name="num"> </span>
+                        <span class="orderSituation1">人预约</span>
+                    </div>
+                </div>
             </div>
 
             <div class="right_report" id="orderdetails" style="display:none">
@@ -181,7 +236,7 @@
                     $.post('new_orderMessage/orderTime', {
                         date: date,
                     }, function (data) {
-                        for (var i = 0; i < 8; i++) {
+                        for (var i = 0; i < 14; i++) {
                             document.getElementsByName("num")[i].innerHTML = 0;
                         }
                         for (var i = 0; i < data.length; i++) {
@@ -190,11 +245,17 @@
                                     case "08:00": data[i].expertime = 0; break;
                                     case "09:00": data[i].expertime = 1; break;
                                     case "10:00": data[i].expertime = 2; break;
-                                    case "13:00": data[i].expertime = 3; break;
-                                    case "14:00": data[i].expertime = 4; break;
-                                    case "15:00": data[i].expertime = 5; break;
-                                    case "16:00": data[i].expertime = 6; break;
-                                    case "17:00": data[i].expertime = 7; break;
+                                    case "11:00": data[i].expertime = 3; break;
+                                    case "12:00": data[i].expertime = 4; break;
+                                    case "13:00": data[i].expertime = 5; break;
+                                    case "14:00": data[i].expertime = 6; break;
+                                    case "15:00": data[i].expertime = 7; break;
+                                    case "16:00": data[i].expertime = 8; break;
+                                    case "17:00": data[i].expertime = 9; break;
+                                    case "18:00": data[i].expertime = 10; break;
+                                    case "19:00": data[i].expertime = 11; break;
+                                    case "20:00": data[i].expertime = 12; break;
+                                    case "21:00": data[i].expertime = 13; break;
                                 }
                                 document.getElementsByName("num")[data[i].expertime].innerHTML = data[i].num;
                             }
