--- a/views/subReport.ejs
+++ b/views/subReport.ejs
@@ -40,7 +40,7 @@
 
                         <li role="presentation" class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                                校准实验
+                            综合实验
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
