--- a/views/exp/exper8.ejs
+++ b/views/exp/exper8.ejs
@@ -38,7 +38,7 @@
                             <td align="center" style="font-weight: bolder">序号</td>
                             <td align="center" style="font-weight: bolder">时间</td>
                             <td align="center" style="font-weight: bolder">实际液位(mm)</td>
-                            <td align="center" style="font-weight: bolder">超声波液位(mm)</td>
+                            <td align="center" style="font-weight: bolder">计算液位(mm)</td>
                         </tr>
                     </table>
                 </div>
