--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -17,7 +17,7 @@
         <style>
             html {
                 height: 100%;
-                /* min-height: 950px; */
+                min-height: 1000px;
             }
 
             body {
